--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,11 +35,31 @@ jobs:
       - name: Install and Build
         run: yarn && yarn build
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.7
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
         with:
-          token: ${{ secrets.ACCESS_TOKEN }}
-          single-commit: true
-          branch: gh-pages
-          clean: true
-          folder: dist
+          name: node-app
+          path: ./dist
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: node-app
+        path: dist
+
+    - name: 'Deploy to Server of Sensing'
+      uses: easingthemes/ssh-deploy@main
+      with:
+        SSH_PRIVATE_KEY: ${{ secrets.SERVER_PRIVATE_KEY }}
+        ARGS: "-rlgoDzvc -i --delete"
+        SOURCE: "dist/"
+        REMOTE_HOST: ${{ secrets.SERVER_IP }}
+        REMOTE_USER: ${{ secrets.SERVER_USER }}
+        TARGET: ${{ secrets.SERVER_DESTINATION }}/ps-office
+        EXCLUDE: "/dist/, /node_modules/"
